Minor tidyup for watchlist and second scrollbar issue fix for search

--- a/stockflux-watchlist/public/notification.css
+++ b/stockflux-watchlist/public/notification.css
@@ -51,6 +51,7 @@ span#watchlist-name {
 span#symbol {
   padding-left: 9px;
   font-weight: 700;
+  letter-spacing: 1px
 }
 
 hr {
